--- a/style.css
+++ b/style.css
@@ -22,62 +22,63 @@ body {
 	text-decoration: none;
 }
 
-.breakdown {
-	width: 960px;
-	height: 180px;
-	margin: 0 auto;
-	overflow: auto;
-	padding: 5px;
-}
-
-.circles-container {
-	width: 250px;
+.breakdown-container {
+	width: 300px;
 	height: 675px;
 	position: relative;
+	margin: 0 0 0 25px;
 	display: inline-block;
 	vertical-align: top;
-	margin: 0 auto;
-	margin-left: 50px;
+}
+
+.breakdown {
+	height: 60%;
+	margin: auto;
+	position: absolute;
+	top: 0; left: 0; bottom: 0; right: 0;
+/*	border: 3px solid rgb(23, 65, 117);
+	border-radius: 15px;*/
+	overflow: auto;
+	box-shadow: 0 0 8px rgba(0,0,0,.14);
+	padding: 10px;
 }
 
 .circles {
 	list-style-type: none;
 	padding: 0;
-	height: 75%;
-	margin: auto;
-	position: absolute;
-	top: 0; left: 0; bottom: 0; right: 0;
+	margin: 20px auto;
+	width: 1000px;
 }
 
 .circles li {
-	width: 102px;
-	height: 102px;
+	width: 82px;
+	height: 82px;
 	display: inline-block;
-	margin-right: 18px;
+	margin-right: 14px;
 	vertical-align: top;
 }
 
 .outer-circle {
-	width: 100px;
-	height: 100px;
+	width: 80px;
+	height: 80px;
 	border-radius: 50%;
 	background-color: #ff0000;
 }
 
 .inner-circle {
-	width: 90px;
-	height: 90px;
+	width: 72px;
+	height: 72px;
 	position: relative;
-	top: 5px;
-	left: 5px;
+	top: 4px;
+	left: 4px;
 	border-radius: 50%;
 	background-color: white;
 }
 
 .circle-text {
 	text-align: center;
-	font-size: 15px;
-	padding-top: 20px;
+	font-size: 13px;
+	padding-top: 16px;
 }
 
 .container {
@@ -143,6 +144,7 @@ body {
 	width: 436px;
 	margin: 0 auto;
 	display: inline-block;
+	margin-bottom: 30px;
 }
 
 .sub-container {
