--- a/style.css
+++ b/style.css
@@ -40,6 +40,15 @@ body {
 	border-radius: 15px;*/
 	overflow: auto;
 	box-shadow: 0 0 8px rgba(0,0,0,.14);
+}
+
+.breakdown-header {
+	background-color: rgb(24, 105, 172);
+	color: white;
+	padding: 10px;
+}
+
+.breakdown-body {
 	padding: 10px;
 }
 
@@ -62,7 +71,46 @@ body {
 	width: 80px;
 	height: 80px;
 	border-radius: 50%;
-	background-color: #ff0000;
+}
+
+#bautista {
+	background-color: rgb(149, 216, 255);
+}
+
+#stanton {
+	background-color: rgb(255, 202, 0);
+}
+
+#tulowitzki {
+	background-color: rgb(77, 56, 123);
+}
+
+#puig {
+	background-color: rgb(0, 85, 151);
+}
+
+#morneau {
+	background-color: rgb(120, 120, 120);
+}
+
+#jones {
+	background-color: rgb(246, 127, 43);
+}
+
+#frazier {
+	background-color: rgb(255, 0, 0);
+}
+
+#dozier {
+	background-color: rgb(212, 31, 70);
+}
+
+#donaldson {
+	background-color: rgb(143, 202, 0);
+}
+
+#cespedes {
+	background-color: rgb(0, 75, 58);
 }
 
 .inner-circle {
