--- a/style.css
+++ b/style.css
@@ -36,10 +36,8 @@ body {
 	margin: auto;
 	position: absolute;
 	top: 0; left: 0; bottom: 0; right: 0;
-/*	border: 3px solid rgb(23, 65, 117);
-	border-radius: 15px;*/
 	overflow: auto;
-	box-shadow: 0 0 8px rgba(0,0,0,.14);
+	box-shadow: 0 0 8px rgba(0,0,0,0.5);
 }
 
 .breakdown-header {
@@ -67,66 +65,73 @@ body {
 	vertical-align: top;
 }
 
-.outer-circle {
-	width: 80px;
-	height: 80px;
-	border-radius: 50%;
-}
-
 #bautista {
-	background-color: rgb(149, 216, 255);
+	border-color: rgb(149, 216, 255);
+	background-color: rgba(149, 216, 255, 0.3);
 }
 
 #stanton {
-	background-color: rgb(255, 202, 0);
+	border-color: rgb(255, 202, 0);
+	background-color: rgba(255, 202, 0, 0.3);
 }
 
 #tulowitzki {
-	background-color: rgb(77, 56, 123);
+	border-color: rgb(77, 56, 123);
+	background-color: rgba(77, 56, 123, 0.3);
 }
 
 #puig {
-	background-color: rgb(0, 85, 151);
+	border-color: rgb(0, 85, 151);
+	background-color: rgba(0, 85, 151, 0.3);
 }
 
 #morneau {
-	background-color: rgb(120, 120, 120);
+	border-color: rgb(120, 120, 120);
+	background-color: rgba(120, 120, 120, 0.3);
 }
 
 #jones {
-	background-color: rgb(246, 127, 43);
+	border-color: rgb(246, 127, 43);
+	background-color: rgba(246, 127, 43, 0.3);
 }
 
 #frazier {
-	background-color: rgb(255, 0, 0);
+	border-color: rgb(255, 0, 0);
+	background-color: rgba(255, 0, 0, 0.3);
 }
 
 #dozier {
-	background-color: rgb(212, 31, 70);
+	border-color: rgb(212, 31, 70);
+	background-color: rgba(212, 31, 70, 0.3);
 }
 
 #donaldson {
-	background-color: rgb(143, 202, 0);
+	border-color: rgb(143, 202, 0);
+	background-color: rgba(143, 202, 0, 0.3);
 }
 
 #cespedes {
-	background-color: rgb(0, 75, 58);
+	border-color: rgb(0, 75, 58);
+	background-color: rgba(0, 75, 58, 0.3);
 }
 
-.inner-circle {
-	width: 72px;
-	height: 72px;
-	position: relative;
-	top: 4px;
-	left: 4px;
+.circle {
+	width: 80px;
+	height: 80px;
 	border-radius: 50%;
 	background-color: white;
+	border: 2px solid black;
+}
+
+.circle:hover {
+	cursor: pointer;
+	box-shadow: 0 0 30px #ccc;
 }
 
 .circle-text {
 	text-align: center;
 	font-size: 13px;
-	padding-top: 16px;
+	padding-top: 20px;
 }
 
 .container {
