--- a/css/style.css
+++ b/css/style.css
@@ -25,18 +25,20 @@ body {
 .breakdown-container {
 	width: 300px;
 	height: 675px;
-	position: relative;
+	/*position: relative;*/
 	margin: 0 0 0 25px;
 	display: inline-block;
 	vertical-align: top;
 }
 
 .breakdown {
-	height: 60%;
+	/*height: 60%;
 	margin: auto;
 	position: absolute;
 	top: 0; left: 0; bottom: 0; right: 0;
+	overflow: auto;*/
 	overflow: auto;
+	height: 400px;
 	box-shadow: 0 0 8px rgba(0,0,0,0.5);
 }
 
@@ -187,6 +189,13 @@ body {
 	display: inline-block;
 }
 
+.num {
+	font-size: 2.2em;
+	font-weight: bold;
+	color: rgb(24, 105, 172);
+	margin: 0;
+}
+
 .player {
 	width: 436px;
 	height: 302px;
@@ -198,6 +207,20 @@ body {
 	margin: 0 auto;
 	display: inline-block;
 	margin-bottom: 30px;
+}
+
+.stats {
+	margin: 15px 0 25px 0;
+	height: 200px;
+}
+
+.stat {
+	text-align: center;
+	margin-bottom: 15px;
+}
+
+.stat p {
+	color: rgb(50, 50, 50);
 }
 
 .sub-container {
@@ -253,7 +276,7 @@ body {
 /* Tablesorter styles */
 
 table.tablesorter thead tr .header {
-	background-image: url(../images/bg.gif);
+	background-image: url(./images/bg.gif);
 	background-repeat: no-repeat;
 	background-position: center right;
 	cursor: pointer;
