--- a/css/style.css
+++ b/css/style.css
@@ -43,13 +43,18 @@ body {
 }
 
 .breakdown-header {
+	width: 100%;
 	background-color: rgb(24, 105, 172);
 	color: white;
 	padding: 10px;
+	position: absolute;
+	z-index: 5;
 }
 
 .breakdown-body {
 	padding: 10px;
+	position: relative;
+	top: 60px;
 }
 
 .circles {
@@ -169,6 +174,30 @@ body {
 	margin-top: 15px;
 }
 
+.legend {
+	width: 145px;
+	height: 75px;
+	background-color: white;
+	display: inline-block;
+	padding: 5px;
+	position: relative;
+	top: -665px;
+	left: 450px;
+	border: 1px solid rgba(0, 0, 0, 0.8);
+	box-shadow: 0 1px 7px rgba(0,0,0,0.65);
+}
+
+.legend p {
+	margin: 0;
+	font-size: 0.8em;
+	display: inline-block;
+}
+
+.legend > .title {
+	text-align: center;
+	font-weight: bold;
+}
+
 .logo {
 	width: 102px;
 	height: 58px;
@@ -194,6 +223,22 @@ body {
 	font-weight: bold;
 	color: rgb(24, 105, 172);
 	margin: 0;
+}
+
+.patch {
+	width: 20px;
+	height: 10px;
+	border: 1px solid rgb(25, 25, 25);
+	border-radius: 3px;
+	display: inline-block;
+}
+
+.best {
+	background-color: rgba(9, 144, 9, 0.65);
+}
+
+.worst {
+	background-color: rgba(231, 24, 24, 0.65);
 }
 
 .player {
@@ -276,7 +321,7 @@ body {
 /* Tablesorter styles */
 
 table.tablesorter thead tr .header {
-	background-image: url(./images/bg.gif);
+	background-image: url(../images/bg.gif);
 	background-repeat: no-repeat;
 	background-position: center right;
 	cursor: pointer;
