--- a/css/style.css
+++ b/css/style.css
@@ -25,18 +25,12 @@ body {
 .breakdown-container {
 	width: 310px;
 	height: 675px;
-	/*position: relative;*/
 	margin: 0 0 0 25px;
 	display: inline-block;
 	vertical-align: top;
 }
 
 .breakdown {
-	/*height: 60%;
-	margin: auto;
-	position: absolute;
-	top: 0; left: 0; bottom: 0; right: 0;
-	overflow: auto;*/
 	overflow: auto;
 	height: 400px;
 	box-shadow: 0 0 8px rgba(0,0,0,0.5);
@@ -174,6 +168,7 @@ body {
 	top: -665px;
 	left: 360px;
 	border: 1px solid rgba(0, 0, 0, 0.8);
+	border-radius: 4px;
 	box-shadow: 0 1px 7px rgba(0,0,0,0.65);
 }
 
