--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,33 @@ body {
 	margin-top: 15px;
 }
 
+.icon {
+	height: 18px;
+	display: inline-block;
+	vertical-align: top;
+	margin-top: 2px;
+	margin-right: 3px;
+	background-repeat: no-repeat;
+}
+
+#icon-ball {
+	width: 18px;
+}
+
+#icon-ball:hover {
+	background: url('../images/ball2.png');
+	background-repeat: no-repeat;
+}
+
+#icon-cap {
+	width: 25px;
+}
+
+#icon-cap:hover {
+	background: url('../images/cap2.png');
+	background-repeat: no-repeat;
+}
+
 .last {
 	margin-right: 0;
 }
@@ -179,6 +206,7 @@ body {
 
 .nav-list a, .top a {
 	color: rgb(24, 105, 172);
+	text-decoration: none;
 }
 
 .nav-list li {
@@ -202,7 +230,7 @@ body {
 }
 
 .primary-nav {
-	width: 250px;
+	width: 318px;
 	margin: 20px auto;
 }
 
