--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,12 @@ body {
 	box-shadow: 0 1px 3px rgba(0,0,0,.2);
 }
 
+.container-primary-nav {
+	width: auto;
+	min-width: 1080px;
+	margin: 0 25px;
+}
+
 .description {
 	font-size: 0.75em;
 	text-align: center;
