--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,8 @@ body {
 .breakdown {
 	overflow: auto;
 	height: 400px;
-	box-shadow: 0 0 8px rgba(0,0,0,0.5);
+	box-shadow: 0 1px 3px rgba(0,0,0,0.65);
+	border-radius: 2px;
 }
 
 .breakdown-header {
@@ -89,7 +90,7 @@ body {
 	padding-top: 20px;
 }
 
-.container-content {
+.content {
 	min-width: 1080px;
 	width: auto;
 	margin: 20px 25px;
@@ -99,9 +100,14 @@ body {
 	box-shadow: 0 1px 3px rgba(0,0,0,.2);
 }
 
+.container-content {
+	min-width: 1160px;
+	width: 100%;
+}
+
 .container-primary-nav {
 	width: auto;
-	min-width: 1080px;
+	min-width: 1110px;
 	margin: 0 25px;
 }
 
@@ -116,7 +122,7 @@ body {
 }
 
 .header-container {
-	min-width: 1080px;
+	min-width: 1160px;
 	width: 100%;
 	height: 58px;
 	background-color: rgb(24, 105, 172);
@@ -330,8 +336,6 @@ li.nav-list-last {
 
 .tweet-button {
 	display: inline-block;
-	margin-top: 18px;
-	margin-left: 25px;
 	position: absolute;
 }
 
